--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TaskRecyclerViewV3</string>
+    <string name="button_add">ADD PLANT</string>
 </resources>
